--- a/index.html
+++ b/index.html
@@ -54,21 +54,48 @@
     <!-- Hero Section -->
     <section id="home" class="hero-section">
         <div class="hero-overlay"></div>
+        
+        <!-- Decorative Elements -->
+        <div class="hero-decorations">
+            <div class="decoration-pepper decoration-pepper-1">🌶️</div>
+            <div class="decoration-pepper decoration-pepper-2">🌶️</div>
+            <div class="decoration-pepper decoration-pepper-3">🌶️</div>
+            <div class="decoration-taco decoration-taco-1">🌮</div>
+            <div class="decoration-taco decoration-taco-2">🌮</div>
+            <div class="decoration-avocado decoration-avocado-1">🥑</div>
+            <div class="decoration-lime decoration-lime-1">🍋</div>
+            <div class="decoration-lime decoration-lime-2">🍋</div>
+            <div class="decoration-cactus decoration-cactus-1">🌵</div>
+            <div class="decoration-star decoration-star-1">⭐</div>
+            <div class="decoration-star decoration-star-2">⭐</div>
+            <div class="decoration-star decoration-star-3">⭐</div>
+        </div>
+        
         <div class="container">
             <div class="row justify-content-center text-center">
-                <div class="col-lg-8">
+                <div class="col-lg-10">
                     <h1 class="hero-title animate-fade-in">Corazón del Desierto</h1>
                     <h2 class="hero-subtitle animate-fade-in-delay">Tex-Mex Grill</h2>
-                    <p class="hero-description animate-fade-in-delay-2">
-                        Auténtica cocina tex-mex en el corazón de Hobbs, New Mexico<br>
-                        <i class="fas fa-map-marker-alt"></i> West Marland Boulevard, Hobbs, NM
-                    </p>
+                    <div class="hero-description-container animate-fade-in-delay-2">
+                        <p class="hero-description-main">
+                            Desde 2016, llevamos los auténticos sabores de México al corazón de Hobbs, New Mexico
+                        </p>
+                        <p class="hero-description-detail">
+                            Miguel y Patricia han creado un hogar culinario donde las recetas familiares de Guadalajara 
+                            se encuentran con los ingredientes frescos del desierto de Nuevo México. Cada plato está 
+                            preparado con amor, utilizando chiles de Hatch recién tostados, carnes de ranchos locales 
+                            y las salsas secretas de la familia que han pasado de generación en generación.
+                        </p>
+                        <p class="hero-location">
+                            <i class="fas fa-map-marker-alt"></i> 2845 West Marland Boulevard, Hobbs, NM 88240
+                        </p>
+                    </div>
                     <div class="hero-buttons animate-fade-in-delay-3">
                         <a href="#menu" class="btn btn-primary btn-lg mx-2">
-                            <i class="fas fa-utensils"></i> Ver Menú
+                            <i class="fas fa-utensils"></i> Ver Nuestro Menú
                         </a>
                         <a href="tel:+15753920555" class="btn btn-outline-light btn-lg mx-2">
-                            <i class="fas fa-phone"></i> (575) 392-0555
+                            <i class="fas fa-phone"></i> Llamar Ahora
                         </a>
                     </div>
                 </div>
