--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <i class="fas fa-heart"></i>
                                 Sobre Nosotros
                             </a>
-                            <a href="tel:+15753920555" class="btn btn-outline-light">
+                            <a href="" class="btn btn-outline-light">
                                 <i class="fas fa-phone"></i>
                                 (575) 392-0555
                             </a>
