--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                             <i class="fas fa-phone"></i>
                             <div>
                                 <strong>Teléfono:</strong><br>
-                                <a href="tel:+15753920555">(575) 392-0555</a>
+                                <a href="#">(575) 392-0555</a>
                             </div>
                         </div>
                         
